# EEG-Foundation-Challenge

./: .gitignore  README.md  model.py  model_challenge1.py  model_challenge2.py  pyproject.toml  requirements.txt
data/: README.md
experiments/: README.md
notebooks/: README.md  eeg_preprocessing.ipynb  explore_eeg.ipynb
src/: __init__.py
src/evaluation/: __init__.py
src/models/: __init__.py
src/training/: __init__.py
submission/: README.md
utils/: README.md
